  direction (forward or backward) for =flyspell-correct-wrapper=.
- [[https://github.com/d12frosted/flyspell-correct/issues/80][#80]] New option =flyspell-correct-abort-on-quit= to configure C-g behavior. When
  set to nil, quitting correction leaves point at the misspelled word.

Contributors:

- [[https://github.com/hubisan][@hubisan]]
- [[https://github.com/gusbrs][@gusbrs]]
- [[https://github.com/okamsn][@okamsn]]

*** Features
:PROPERTIES:
:ID:                     f33b0d01-b7bf-47fa-9fd3-08f6ffc44449
:END:

- [[https://github.com/d12frosted/flyspell-correct/issues/52][#52]] Add highlighting of the word being currently corrected.
- Support Emacs customization interface - =customize=.
- Align point movement between =flyspell-correct-at= and
  =flyspell-correct-move=, so there is no difference in resulting point location
  when any of these functions is called with point at misspelled word.
- Rewrite all tests using [[https://github.com/jorgenschaefer/emacs-buttercup][buttercup]] library.
- [[https://github.com/d12frosted/flyspell-correct/issues/66][#66]], [[https://github.com/d12frosted/flyspell-correct/issues/68][#68]] Allow to correct and save the word in one pass.
- [[https://github.com/d12frosted/flyspell-correct/issues/73][#73]] New action - =stop= allowing to leave the point at the misspelled word.
- [[https://github.com/d12frosted/flyspell-correct/issues/58][#58]] =skip= action now allows to correct 'next' word even if rapid mode is not
  enabled.
- [[https://github.com/d12frosted/flyspell-correct/issues/58][#58]], [[https://github.com/d12frosted/flyspell-correct/issues/72][#72]] Allow to hook into =flyspell-correct-ivy= interface via
  =flyspell-correct-ivy-map=.
- [[https://github.com/d12frosted/flyspell-correct/pull/78][#78]] Add actions to =flyspell-correct-dummy= interface.
- [[https://github.com/d12frosted/flyspell-correct/pull/79][#79]] Disable sorting in =flyspell-correct-dummy=.